# IT8951_ePaper_Py

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_PHASE_9.md  CODE_REVIEW_SUMMARY.md  CONSTANTS_AUDIT.md  CONTRIBUTING.md  DRIVER_COMPARISON.md  LICENSE  README.md  ROADMAP.md  ROADMAP_PRIORITIES.md  SECURITY.md  WIKI_ANALYSIS.md  codecov.yml  conftest.py  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-ats.yml  ci.yml  windows-test.yml
docs/: ATS_MONITORING.md  BEST_PRACTICES.md  BIT_DEPTH_SUPPORT.md  DISPLAY_MODES.md  DOCSTRING_EXAMPLES.md  ERROR_RECOVERY.md  HARDWARE_SETUP.md  MEMORY_SAFETY.md  MIGRATION_GUIDE.md  PERFORMANCE_GUIDE.md  PLATFORM_SUPPORT.md  POWER_MANAGEMENT.md  THREAD_SAFETY.md  docstring_examples.md
docs/adr/: 001-use-google-style-docstrings.md  002-hardware-abstraction-layer.md  003-default-pixel-format.md  004-memory-safety-strategy.md  005-numpy-pixel-packing.md  README.md
examples/: a2_1bpp_optimization.py  a2_mode_safe_usage.py  basic_display.py  battery_powered_demo.py  binary_1bpp_demo.py  buffer_pool_demo.py  debug_mode_demo.py  enhanced_driving_demo.py  error_recovery_demo.py  extended_modes_demo.py  grayscale_2bpp_demo.py  image_display.py  integration_scenarios.py  memory_monitoring_demo.py  memory_safety_demo.py  partial_update.py  performance_4bpp.py  performance_profiling_demo.py  pixel_packing_benchmark.py  power_management_demo.py  progressive_loading_demo.py  retry_demo.py  spi_speed_demo.py  thread_safety_demo.py  troubleshooting_demo.py  vcom_calibration.py
scripts/: sync_version.py
src/IT8951_ePaper_Py/: __init__.py  alignment.py  buffer_pool.py  command_utils.py  constants.py  debug_mode.py  display.py  exceptions.py  it8951.py  memory_monitor.py  models.py  pixel_packing.py  retry_policy.py  spi_interface.py  thread_safe.py  utils.py  vcom_calibration.py
stubs/RPi/: __init__.pyi
stubs/RPi/GPIO/: __init__.pyi
stubs/spidev/: __init__.pyi
tests/: __init__.py  test_alignment_edge_cases.py  test_bit_depth_conversion.py  test_buffer_pool.py  test_command_utils.py  test_constants.py  test_debug_mode.py  test_display.py  test_display_mode_performance.py  test_exceptions.py  test_extended_display_modes.py  test_integration.py  test_it8951.py  test_memory_monitor.py  test_models.py  test_numpy_pixel_packing.py  test_performance.py  test_pixel_packing.py  test_power_management_performance.py  test_retry_policy.py  test_spi_interface.py  test_thread_safety.py  test_utils.py
